flapivor/tests/tests-m3/hopix/typechecker/bad/orpatterns2.hopix
type u () = A (int) | B (int) | C

val test1 : int = A (0, 0) ? {
| A (x : int, (_ : int)) | B (x : int) => x
| C => 0
}

